# inliner2

./: .gitignore  README.md  example.xlsx  inliner2.R  inliner2.cabal  inliner2_00.R  stack.yaml
C/: cfile.c
src/: Lib.hs  ReadXLSX.hs
src-dll/: .gitignore  ExportR.hs  ExportR_00.hs  TestDLL.hs
