name:                inliner2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/inliner2#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , inline-r
                     , vector
  default-language:    Haskell2010
  default-extensions:  ForeignFunctionInterface
                     , DataKinds
  extra-libraries:     stdc++
  include-dirs:        C
  C-sources:           C/cfile.c

foreign-library inliner2
  buildable:           False
  type:                native-shared
  if os(Windows)
    options: standalone
  other-modules:       ExportR
  build-depends:       base >=4.7 && <5.0
                     , inliner2
                     , inline-r
                     , singletons
                     , polynomial
  hs-source-dirs:      src-dll
  c-sources:           C/StartEnd.c
  default-language:    Haskell2010
  extensions:          ForeignFunctionInterface
                     , DataKinds

source-repository head
  type:     git
  location: https://github.com/githubuser/inliner2
